--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,9 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pytest = "*"
 
 [packages]
-httptools = "*"
 
 [requires]
 python_version = "3.8"
